--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,9 @@ flutter:
 
   uses-material-design: true
   assets:
-    - assets/images/
+    - assets/images/logos/
+    - assets/images/icons/
+    - assets/images/illustrations/
     - assets/fonts/
 
   fonts:
